further rename tweaks

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -156,7 +156,7 @@ server {
         rewrite ^/doc/2020-crc/(?<original>.*) /$original permanent;
         rewrite ^/doc/docs/(?<original>.*) /$original permanent;
         rewrite ^/doc/images/(?<original>.*) /doc/$original permanent;
-        rewrite ^/images/images/(?<original>.*) /images/$original permanent;
+        rewrite ^/image/images/(?<original>.*) /images/$original permanent;
         rewrite ^/doc/iq/docs/(?<original>.*) /doc/$original permanent;
         rewrite ^/doc/tags/(?<original>.*) /tags/$original permanent;
         rewrite ^/doc/www/au.news.yahoo.com/Chrome/(?<original>.*) /$original permanent;
@@ -289,7 +289,6 @@ server {
         rewrite ^/doc/www/www.petco.com/images/colors/color1/(?<original>.*) /$original permanent;
         rewrite ^/reviews/Wellbutrin_vs_Generic_Bupropion/Wellbutrin/(?<original>.*) /$original permanent;
         rewrite ^/review/reviews/(?<original>.*) /reviews/$original permanent;
-        rewrite ^/review/(?<original>.*) /reviews/$original permanent;
         rewrite ^/reviewsfood-testing/.*/(?<original>.*) /$original permanent;
         rewrite ^/doc/www/www.instagram.com/android-app.*/(?<original>.*) /$original permanent;
         rewrite ^/client_error/(?<original>.*) /$original permanent;
@@ -413,8 +412,8 @@ server {
         rewrite ^/(?<original>.*)\?utm_.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&lang=en$ /$original permanent;
         rewrite ^/(?<original>.*)\?revision=.*$ /$original permanent;
-        rewrite ^/images%25252F(?<original>.*)$ /images/$original permanent;
-        rewrite ^/images%25252Fthumbnails%25252Fwikipedia%25252F(?<original>.*)$ /images/thumbnails/wikipedia/$original permanent;
+        rewrite ^/image%25252F(?<original>.*)$ /images/$original permanent;
+        rewrite ^/image%25252Fthumbnails%25252Fwikipedia%25252F(?<original>.*)$ /images/thumbnails/wikipedia/$original permanent;
         rewrite ^/(?<original>.*)\?amp\;\?amp\;.*$ /$original permanent;
         rewrite ^/(?<original>doc/.*\.pdf)The$ /$original permanent;
         rewrite ^/(?<original>.*)\&spec\=ft100x75$ /$original permanent;
@@ -619,8 +618,8 @@ server {
         rewrite ^/metadata/annotations/https%3A%2F%2Fen.wikipedia.org%2Fwiki%2Fz(?<suffix>.*)$ /metadata/annotation/https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FZ$suffix permanent;
 
         # post-WP popup shift to fully-dynamic:
-        rewrite ^/images/thumbnails/wikipedia/[0-9][0-9][0-9]px-(?<original>.*) https://en.wikipedia.org/wiki/File:$original permanent;
-        rewrite ^/images/thumbnails/wikipedia/(?<original>.*) https://en.wikipedia.org/wiki/File:$original permanent;
+        rewrite ^/image/thumbnails/wikipedia/[0-9][0-9][0-9]px-(?<original>.*) https://en.wikipedia.org/wiki/File:$original permanent;
+        rewrite ^/image/thumbnails/wikipedia/(?<original>.*) https://en.wikipedia.org/wiki/File:$original permanent;
         rewrite ^/metadata/annotations/https%253A%252F%252Fen.wikipedia.org%252Fwiki%252F(?<original>.*)\.html$ https://en.wikipedia.org/wiki/$original permanent;
         rewrite ^/(?<original>doc/.*).Pdf /$original.pdf permanent;
         rewrite ^/(?<original>.*)\&source=gmail /$original permanent;
@@ -672,7 +671,7 @@ server {
         rewrite ^/(?<original>.*[a-z])(?<originalAnchor>fnref[0-9]+)$ /$original\#$originalAnchor permanent;
         rewrite ^/(?<original>.*[a-z])(?<originalAnchor>sn[0-9]+)$    /$original\#$originalAnchor permanent;
         rewrite ^/(?<original>.*)/[0-9]+px-.*em.*$ /$original permanent;
-        rewrite ^/images/(?<original>201[2-5]-[01][1-9]-[1-3][0-9]-tumblr_[mn][a-z0-9_]+_640\.png).*$ /images/hardtruthsfromsoftcats.tumblr.com/$original;
+        rewrite ^/image/(?<original>201[2-5]-[01][1-9]-[1-3][0-9]-tumblr_[mn][a-z0-9_]+_640\.png).*$ /image/hardtruthsfromsoftcats.tumblr.com/$original;
         rewrite ^/(?<original>doc/.*)\]\(http.*$ /$original permanent;
         rewrite ^/metadata/annotations/similar/(?<original>.*)$ /metadata/annotation/similar/$original permanent;
         rewrite ^/doc/psycology/(?<original>.*)$ /doc/psychology/$original permanent;
@@ -708,7 +707,7 @@ server {
         rewrite ^/doc/genetics/correlation/(?<old>.*)$ doc/genetics/heritable/correlation/$old permanent;
         rewrite ^/doc/linkrot/(?<old>.*)$ doc/cs/linkrot/$old permanent;
         rewrite ^/doc/advertising/(?<old>.*)$ doc/economics/advertising/$old permanent;
-        rewrite ^/xf/BL_Images/(?<original>.*)$ https://www.bluelight.org/xf/BL_Images/$original permanent;
+        rewrite ^/xf/BL_Image/(?<original>.*)$ https://www.bluelight.org/xf/BL_Image/$original permanent;
         rewrite ^/doc/sf/(?<old>.*)$ /doc/fiction/science-fiction/$old permanent;
         rewrite ^/doc/ai/alphafold/(?<old>.*)$ /doc/ai/nn/transformer/alphafold/$old permanent;
         rewrite ^/doc/lithium/(?<old>.*)$ /doc/psychiatry/lithium/$old permanent;
@@ -724,7 +723,7 @@ server {
         rewrite ^/doc/ai/retrieval/(?<old>.*)$ /doc/ai/nn/retrieval/$old permanent;
         rewrite ^/doc/ai/adversarial/(?<old>.*)$ /doc/ai/nn/adversarial/$old permanent;
         rewrite ^/doc/ai/diffusion/(?<old>.*)$ /doc/ai/nn/diffusion/$old permanent;
-        rewrite ^/images/ai/diffusion/(?<old>.*)$ /images/ai/nn/diffusion/$old permanent;
+        rewrite ^/image/ai/diffusion/(?<old>.*)$ /image/ai/nn/diffusion/$old permanent;
         rewrite ^/doc/japanese/(?<old>.*)$ /doc/japan/$old permanent;
         rewrite ^/doc/japan/zeami/(?<old>.*)$ /doc/japan/poetry/zeami/$old permanent;
         rewrite ^/doc/music-distraction/(?<old>.*)$ /doc/music/music-distraction/$old permanent;
@@ -740,25 +739,28 @@ server {
         rewrite ^/(?<original>doc/.*)/[0-9][0-9][0-9][0-9]$ /$original permanent;
         rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
         rewrite ^/\.\/(?<all>.*)$ /$all permanent;
+        rewrite ^/Doc/(?<old>.*)$ /doc/$old permanent;
+        rewrite ^/Doc/History/(?<old>.*)$ /doc/history/$old permanent;
 
-        rewrite ^/images/otakutalk/(?<old>.*)$ /images/eva/otaku-talk/$old permanent;
-        rewrite ^/images/storyofyourlife/(?<old>.*)$ /images/story-of-your-life/$old permanent;
-        rewrite ^/images/notenkimemoirs/blueblazes/(?<old>.*)$ /images/notenki-memoirs/blue-blazes/$old permanent;
-        rewrite ^/images/notenkimemoirs/(?<old>.*)$ /images/notenki-memoirs/$old permanent;
-        rewrite ^/images/spacedrepetition/(?<old>.*)$ /images/spaced-repetition/$old permanent;
-        rewrite ^/images/dnb/(?<old>.*)$ /images/dual-n-back/$old permanent;
-        rewrite ^/images/philo/(?<old>.*)$ /images/philosophy/$old permanent;
-        rewrite ^/images/ab/(?<old>.*)$ /images/ab-testing/$old permanent;
-        rewrite ^/images/coinflip/(?<old>.*)$ /images/coin-flip/$old permanent;
-        rewrite ^/images/silkroad/(?<old>.*)$ /images/silk-road/$old permanent;
-        rewrite ^/images/littleboy/(?<old>.*)$ /images/eva/little-boy/$old permanent;
-        rewrite ^/images/ai/dalle/2/(?<old>.*)$ /images/ai/dall-e/2/$old permanent;
-        rewrite ^/images/ai/dalle/1/(?<old>.*)$ /images/ai/dall-e/1/$old permanent;
-        rewrite ^/images/ai/dalle/(?<old>.*)$ /images/ai/dall-e/$old permanent;
-        rewrite ^/images/orderstatistics/(?<old>.*)$ /images/statistics/order/$old permanent;
-        rewrite ^/images/dinosaurcomics/(?<old>.*)$ /images/humor/dinosaur-comics/$old permanent;
-        rewrite ^/images/lwsurvey/(?<old>.*)$ /images/lw-survey/$old permanent;
-        rewrite ^/images/rl/(?<old>.*)$ /images/reinforcement-learning/$old permanent;
+        rewrite ^/image/otakutalk/(?<old>.*)$ /image/eva/otaku-talk/$old permanent;
+        rewrite ^/image/storyofyourlife/(?<old>.*)$ /image/story-of-your-life/$old permanent;
+        rewrite ^/image/notenkimemoirs/blueblazes/(?<old>.*)$ /image/notenki-memoirs/blue-blazes/$old permanent;
+        rewrite ^/image/notenkimemoirs/(?<old>.*)$ /image/notenki-memoirs/$old permanent;
+        rewrite ^/image/spacedrepetition/(?<old>.*)$ /image/spaced-repetition/$old permanent;
+        rewrite ^/image/dnb/(?<old>.*)$ /image/dual-n-back/$old permanent;
+        rewrite ^/image/philo/(?<old>.*)$ /image/philosophy/$old permanent;
+        rewrite ^/image/ab/(?<old>.*)$ /image/ab-testing/$old permanent;
+        rewrite ^/image/coinflip/(?<old>.*)$ /image/coin-flip/$old permanent;
+        rewrite ^/image/silkroad/(?<old>.*)$ /image/silk-road/$old permanent;
+        rewrite ^/image/littleboy/(?<old>.*)$ /image/eva/little-boy/$old permanent;
+        rewrite ^/image/ai/dalle/2/(?<old>.*)$ /image/ai/dall-e/2/$old permanent;
+        rewrite ^/image/ai/dalle/1/(?<old>.*)$ /image/ai/dall-e/1/$old permanent;
+        rewrite ^/image/ai/dalle/(?<old>.*)$ /image/ai/dall-e/$old permanent;
+        rewrite ^/image/orderstatistics/(?<old>.*)$ /image/statistics/order/$old permanent;
+        rewrite ^/image/order-statistics/(?<old>.*)$ /image/statistics/order/$old permanent;
+        rewrite ^/image/dinosaurcomics/(?<old>.*)$ /image/humor/dinosaur-comics/$old permanent;
+        rewrite ^/image/lwsurvey/(?<old>.*)$ /image/lw-survey/$old permanent;
+        rewrite ^/image/rl/(?<old>.*)$ /image/reinforcement-learning/$old permanent;
         rewrite ^/static/static/(?<old>.*)$ /static/$old permanent;
         rewrite /doc/(?<first>[a-z0-9-]+)/doc/(?<second>.*)$ /doc/$first/$second permanent;
         rewrite /doc/(?<first>[a-z0-9-]+/[a-z0-9-]+)/doc/(?<second>[a-z0-9-].*)$ /doc/$first/$second permanent;
@@ -783,7 +785,7 @@ server {
 
         # rewrite LW links like `/posts/5yFRd3cjLpm3Nd6Di/argument-screens-off-authority` (17 character ID):
         rewrite ^(?<old>/posts/[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]/[a-z-]+$) https://lesswrong.com$old permanent;
-        rewrite ^/images/(?<old>.*)-530px.jpg-530px.jpg$ /images/$old-530px.jpg permanent;
+        rewrite ^/image/(?<old>.*)-530px.jpg-530px.jpg$ /image/$old-530px.jpg permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
