--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9634,6 +9634,12 @@
 "~^/ttps://gwern.net/reviews/Operas$" "https://gwern.net/reviews/Operas";
 "~^/ttps://gwern.net/reviews/Umineko$" "https://gwern.net/reviews/Umineko";
 "~^/ttps://gwern.net/reviews/cat$" "https://gwern.net/reviews/cat";
+"~^/Archiving-URL.*$" "/archiving";
+"~^/Book-review.*$" "/review/book";
+"~^/doc/2002-notenki-memoirs.html.*$" "/doc/eva/2002-takeda-notenkimemoirs";
+"~^/doc/1998-dales-truthinmathematics.pdf.*$" "/doc/math/1998-dales-truthinmathematics.pdf";
+"~^/doc/statistics/1986-lehmann-testingstatisticalhypotheses.pdf.*$" "/doc/statistics/decision/1986-lehmann-testingstatisticalhypotheses.pdf";
+"~^/doc/genetics/2014-sariaslan-2.pdf.*$" "/doc/psychiatry/schizophrenia/2014-sariaslan-2.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14617,6 +14623,7 @@
 "~^/guardfile.*$" "/static/404";
 "~^/gemfile.*$" "/static/404";
 "~^/credentials$" "/static/404";
+"~^/grunt.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
