more renaming cleanup; +

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9640,6 +9640,16 @@
 "~^/doc/1998-dales-truthinmathematics.pdf.*$" "/doc/math/1998-dales-truthinmathematics.pdf";
 "~^/doc/statistics/1986-lehmann-testingstatisticalhypotheses.pdf.*$" "/doc/statistics/decision/1986-lehmann-testingstatisticalhypotheses.pdf";
 "~^/doc/genetics/2014-sariaslan-2.pdf.*$" "/doc/psychiatry/schizophrenia/2014-sariaslan-2.pdf";
+"~^/doc\.technology/2020-ramesh.pdf.*$" "/doc/technology/2020-ramesh.pdf";
+"~^/doc/-melatonin/2005-brzezinski.pdf.*$" "/doc/melatonin/2005-brzezinski.pdf";
+"~^/doc/1977-ross.pdf.*$" "/doc/sociology/1977-rossi.pdf";
+"~^/docs/1977-ross.pdf.*$" "/doc/sociology/1977-rossi.pdf";
+"~^/doc/2013-anonymous-strategicconsequencesofchineseracism.pdf.*$" "/doc/genetics/selection/artificial/2013-anonymous-strategicconsequencesofchineseracism.pdf";
+"~^/null$" "/index";
+"~^/monthly$" "/newsletter/index";
+"~^/doc/technology/favicon.ico.*$" "/static/img/favicon.png";
+"~^/doc/genetics/2014-barnes.pdf.*$" "/doc/genetics/heritable/2014-barnes.pdf";
+"~^/fiction/mulberry-tree.*$" "/fiction/mulberry";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14624,6 +14634,8 @@
 "~^/gemfile.*$" "/static/404";
 "~^/credentials$" "/static/404";
 "~^/grunt.*$" "/static/404";
+"~^/.*slotplay138.com.*$" "/static/404";
+"~^/.*pungslot.com.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
