--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -6895,7 +6895,7 @@
 "~^/doc/[a-km-z].*/Embryo-selection.*$" "Embryo-selection";
 "~^/Embryo%20selection#counteracting-dysgenics$" "/Embryo-selection#counteracting-dysgenics";
 "~^/doc/[a-km-z].*/Epigrams.*$" "/Epigrams";
-"~^/doc/Terrorism-is-not-Effective$" "/errorism-is-not-Effective";
+"~^/doc/Terrorism-is-not-Effective$" "/terrorism-is-not-effective";
 "~^/doc/[a-km-z].*/Ethical-sperm-donation.*$" "/Ethical-sperm-donation";
 "~^/doc/Everything$" "/Everything";
 "~^/Everything%20-%20gossetstudent-1904$" "/Everything#gossetstudent-1904";
@@ -9440,11 +9440,10 @@
 "~^/AI-folklore-tells-a.*$" "/Tanks";
 "~^/Tanks.page/index.html.*$" "/Tanks.page";
 "~^/doc/rotten.*/Tea.*$" "/Tea";
-"~^/doc/genetics/selection/www.mountimprobable.com/Terrorism-is-not-about-Terror$" "/Terrorism-is-not-about-Terror";
-"~^/@about-the-chicks-man.*$" "/Terrorism-is-not-about-Terror#about-the-chicks-man";
-"~^/@its-about-feeling-better.*$" "/Terrorism-is-not-about-Terror#its-about-feeling-better";
-"~^/terrorism-is-not-about-terror.page$" "/Terrorism-is-not-about-Terror.page";
-"~^/terrorism-is-not-about-terror@the-problem.*$" "/Terrorism-is-not-about-Terror#the-problem";
+"~^/doc/genetics/selection/www.mountimprobable.com/Terrorism-is-not-about-Terror$" "/terrorism-is-not-about-terror";
+"~^/@about-the-chicks-man.*$" "/terrorism-is-not-about-terror#about-the-chicks-man";
+"~^/@its-about-feeling-better.*$" "/terrorism-is-not-about-terror#its-about-feeling-better";
+"~^/terrorism-is-not-about-terror@the-problem.*$" "/terrorism-is-not-about-terror#the-problem";
 "~^/doc/[a-km-z].*/Terrorism-is-not-Effective.*$" "/Terrorism-is-not-Effective";
 "~^/Terrorism-is-not-Effective/n.*$" "/Terrorism-is-not-Effective/";
 "~^/doc/[a-km-z].*/The-3-Grenades.*$" "/The-3-Grenades";
@@ -9650,6 +9649,11 @@
 "~^/doc/technology/favicon.ico.*$" "/static/img/favicon.png";
 "~^/doc/genetics/2014-barnes.pdf.*$" "/doc/genetics/heritable/2014-barnes.pdf";
 "~^/fiction/mulberry-tree.*$" "/fiction/mulberry";
+"~^/doc/sociology/1977-rossi.pdf.*$" "/doc/sociology/1978-rossi.pdf";
+"~^/doc/2008-nakamoto.*$" "/doc/bitcoin/2008-nakamoto";
+"~^/Black-market-survival.*$" "/DNM-survival";
+"~^/doc/iq/1949-roe-biologists.pdf.*$" "/doc/iq/high/anne-roe/1949-roe-biologists.pdf";
+"~^/Anki$" "/spaced-repetition";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14636,6 +14640,46 @@
 "~^/grunt.*$" "/static/404";
 "~^/.*slotplay138.com.*$" "/static/404";
 "~^/.*pungslot.com.*$" "/static/404";
+"~^/back/.*$" "/static/404";
+"~^/azure-pipelines.*$" "/static/404";
+"~^/axis2/.*$" "/static/404";
+"~^/asicommon/.*$" "/static/404";
+"~^/badging/.*$" "/static/404";
+"~^/advanced.*$" "/static/404";
+"~^/adsearch..*$" "/static/404";
+"~^/97.wordorion.*$" "/static/404";
+"~^/%5C%5C.*$" "/static/404";
+"~^/3502-or-8358.*$" "/static/404";
+"~^/2abrkak91188.*$" "/static/404";
+"~^/cognos_express/.*$" "/static/404";
+"~^/copy-of-web-inf/.*$" "/static/404";
+"~^/controllers/.*$" "/static/404";
+"~^/contributor/.*$" "/static/404";
+"~^/contrib/.*$" "/static/404";
+"~^/_config.*$" "/static/404";
+"~^/db/main.php.*$" "/static/404";
+"~^/dfsms/.*$" "/static/404";
+"~^/customer-stories.*$" "/static/404";
+"~^/+cscoe+/.*$" "/static/404";
+"~^/groovy.*$" "/static/404";
+"~^/gradle/.*$" "/static/404";
+"~^/opensearch.*$" "/static/404";
+"~^/omni_success.*$" "/static/404";
+"~^/oh/.*$" "/static/404";
+"~^/oauth/.*$" "/static/404";
+"~^/nuxeo/.*$" "/static/404";
+"~^/npm-debug.*$" "/static/404";
+"~^/nonexistent.*$" "/static/404";
+"~^/nifi-api/.*$" "/static/404";
+"~^/nette.micro/.*$" "/static/404";
+"~^/providers/.*$" "/static/404";
+"~^/pipeline/a.*$" "/static/404";
+"~^/PhoneBackup/.*$" "/static/404";
+"~^/pentaho/.*$" "/static/404";
+"~^/Partners/.*$" "/static/404";
+"~^/reset/.*$" "/static/404";
+"~^/robomongo..*$" "/static/404";
+"~^/tcpconfig.html.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
