--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -333,6 +333,10 @@ server {
         rewrite ^/\%26amp\;quot\;(?<original>.*) /$original permanent;
         rewrite ^/.*\%26amp\;quot\;(?<original>.*) /$original permanent;
         rewrite ^/newsletter/2020/%26amp\;quot\;https\:\/\/.*/(?<original>.*) /$original permanent;
+        rewrite ^/(?<original>.*).djvu$ /$original.pdf permanent;
+        rewrite ^/(?<original>.*)/index/$ /$original/index permanent;
+        rewrite ^/(?<original>.*)/.html/$ /$original/.html permanent;
+        rewrite ^/(?<original>.*)/.pdf/$ /$original/.pdf permanent;
 
         ## rewrite mistaken newsletter URLs like '/newsletter/2019/7' to '/newsletter/2019/07':
         rewrite ^/newsletter/(?<originalYear>20[0-5][0-9])/(?<originalMonth>[0-9])$ /newsletter/$originalYear/0$originalMonth permanent;
