--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -449,6 +449,8 @@ server {
         rewrite ^/static/js/(?<original>.*)\.js\.map$ /static/js/$original permanent;
         rewrite ^/doc/(?<original>.*\.pdf)/index.*$ /doc/$original permanent;
         rewrite ^/doc/(?<original>.*\.pdf)/$ /doc/$original permanent;
+        rewrite ^/doc/(?<original>.*\.html)/$ /doc/$original permanent;
+        rewrite ^/doc/(?<original>.*\.html)/index$ /doc/$original permanent;
         rewrite ^/(?<original>.*)\&hl\=en$ /$original permanent;
         rewrite ^/[A-Z].*(?<original>/tags/.*) /$original permanent;
         rewrite ^/(?<original>doc/.*/index)/index.html /$original permanent;
@@ -745,6 +747,7 @@ server {
         rewrite ^/\.\/(?<all>.*)$ /$all permanent;
         rewrite ^/Doc/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/Doc/History/(?<old>.*)$ /doc/history/$old permanent;
+        rewrite ^/doc/cat/tartarian-honeysuckle/(?<old>.*)$ /doc/cat/tatarian-honeysuckle/$old permanent;
 
         rewrite ^/image/otakutalk/(?<old>.*)$ /image/eva/otaku-talk/$old permanent;
         rewrite ^/image/storyofyourlife/(?<old>.*)$ /image/story-of-your-life/$old permanent;
