--- a/nginx/rsyncd.conf
+++ b/nginx/rsyncd.conf
@@ -6,7 +6,7 @@ log file = /var/log/rsyncd.log
 
 [danbooru2021]
    path = /home/danbooru/torrent/danbooru2021/
-   comment = Danbooru2021 mirror (see https://gwern.net/Danbooru2021 )
+   comment = Danbooru2021 mirror (see https://gwern.net/danbooru2021 )
    list = yes
    read only = yes
    timeout = 6000
@@ -28,13 +28,6 @@ log file = /var/log/rsyncd.log
 [twdne]
    path = /home/gwern/thiswaifudoesnotexist.net/
    comment = ThisWaifuDoesNotExist.net full site mirror (all JPGs and text files)
-   list = yes
-   read only = yes
-   timeout = 6000
-
-[gwernnet]
-   path = /home/gwern/gwern.net/
-   comment = Gwern.net compiled site mirror (all HTML, snippets, documents)
    list = yes
    read only = yes
    timeout = 6000
