--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9654,6 +9654,24 @@
 "~^/Black-market-survival.*$" "/DNM-survival";
 "~^/doc/iq/1949-roe-biologists.pdf.*$" "/doc/iq/high/anne-roe/1949-roe-biologists.pdf";
 "~^/Anki$" "/spaced-repetition";
+"~^/doc/1985-hofstadter.*$" "/doc/existential-risk/1985-hofstadter";
+"~^/doc/economics/automation/favicon.ico.*$" "/static/img/favicon.png";
+"~^/GPT-3-on.*$" "/gpt-3";
+"~^/Mouse-Utopi.*$" "/mouse-utopia";
+"~^/doc/1993-ericsson-deliberatepractice.pdf.*$" "/doc/psychology/writing/1993-ericsson.pdf";
+"~^/doc/2010-crc.*$" "/doc/eva/2010-crc";
+"~^/doc/2013-romagna.pdf.*$" "/doc/nicotine/2013-romagna.pdf";
+"~^/doc/sr/2013-van-ho.*$" "/doc/darknet-market/2013-van-hout-2.pdf";
+"~^/doc/sr/2015-02-22-agora-fremblingdocket.maff.*$" "/doc/darknet-market/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/doc/sr/2015-frembling-caed-03307884002.pdf.*$" "/doc/darknet-market/agora/2015-frembling-caed-03307884002.pdf";
+"~^/doc/statistics/1987-ayton.pdf.*$" "/doc/statistics/bayes/1987-ayton.pdf";
+"~^/doc/statistics/decision/1994-benter$" "/doc/statistics/decision/1994-benter";
+"~^/doc/.*/docs/bitcoin/2014-mccaleb.*$" "/docs/bitcoin/2014-mccaleb";
+"~^/fiction/clippy/\*\*.*$" "fiction/clippy";
+"~^/mead$" "/review/mead";
+"~^/.*/Resilient-Haskell-Software.*$" "/Resilient-Haskell-Software";
+"~^/sicp/Introduction/$" "/sicp/introduction";
+"~^/static/font/mathjax/tex/woff/mathjax_main-regular.woff.*$" "/static/font/mathjax/TeX/woff/MathJax_Main-Regular.woff";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14680,6 +14698,14 @@
 "~^/reset/.*$" "/static/404";
 "~^/robomongo..*$" "/static/404";
 "~^/tcpconfig.html.*$" "/static/404";
+"~^/.zshrc.*$" "/static/404";
+"~^/._web.*$" "/static/404";
+"~^/.*/wp-login.php.*$" "/static/404";
+"~^/report.*$" "/static/404";
+"~^/railo-context/.*$" "/static/404";
+"~^/.history.*$" "/static/404";
+"~^/.gitlab-ci.*$" "/static/404";
+"~^/[a-z0-9]+\.cfm.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
