--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5045,3 +5045,8 @@ default "";
 "~^/penpen$" "/fiction/penpen";
 "~^/mulberry-tree$" "/fiction/mulberry";
 "~^/buddhas-wheel$" "/fiction/buddhas-wheel";
+"~^/doc/psychiatry/2023-scull.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/2023-scull.pdf";
+"~^/doc/psychiatry/2017-bartels.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/2017-bartels.pdf";
+"~^/doc/psychiatry/1976-spitzer.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/1976-spitzer.pdf";
+"~^/doc/statistics/bias/2020-griggs.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/2020-griggs.pdf";
+"~^/doc/statistics/bias/1976-lando.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/1976-lando.pdf";
