--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -5050,3 +5050,6 @@ default "";
 "~^/doc/psychiatry/1976-spitzer.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/1976-spitzer.pdf";
 "~^/doc/statistics/bias/2020-griggs.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/2020-griggs.pdf";
 "~^/doc/statistics/bias/1976-lando.pdf.*$" "/doc/psychiatry/schizophrenia/rosenhan/1976-lando.pdf";
+"~^/doc/ai/2023-li.pdf.*$" "/doc/ai/tabular/2023-li.pdf";
+"~^/static/css/dark-mode.css$" "/static/css/include/dark-mode-GENERATED.css";
+"~^/static/css/dark-mode.css.html$" "/static/css/include/dark-mode-GENERATED.css.html";
