--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -723,7 +723,8 @@ server {
         rewrite ^/doc/iq/fullerton/(?<old>.*)$ /doc/iq/high/fullerton/$old permanent;
         rewrite ^/doc/iq/munich/(?<old>.*)$ /doc/iq/high/munich/$old permanent;
         rewrite ^/doc/longevity/john-bjorksten/(?<old>.*)$ /doc/longevity/johan-bjorksten/$old permanent;
-        rewrite ^/doc/ai/clip/samples/(?<old>.*)$ /doc/ai/nn/transformer/clip/samples/$old permanent;
+        rewrite ^/doc/ai/clip/samples/(?<old>.*)$ /doc/ai/nn/transformer/clip/sample/$old permanent;
+        rewrite ^/doc/ai/nn/transformer/clip/samples/(?<old>.*)$ /doc/ai/nn/transformer/clip/sample/$old permanent;
         rewrite ^/doc/ai/clip/(?<old>.*)$ /doc/ai/nn/transformer/clip/$old permanent;
         rewrite ^/doc/ai/sparsity/(?<old>.*)$ /doc/ai/nn/sparsity/$old permanent;
         rewrite ^/doc/ai/retrieval/(?<old>.*)$ /doc/ai/nn/retrieval/$old permanent;
@@ -748,6 +749,7 @@ server {
         rewrite ^/Doc/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/Doc/History/(?<old>.*)$ /doc/history/$old permanent;
         rewrite ^/doc/cat/tartarian-honeysuckle/(?<old>.*)$ /doc/cat/tatarian-honeysuckle/$old permanent;
+        rewrite ^/(?<old>.*)/null$ /$old/index permanent;
 
         rewrite ^/image/otakutalk/(?<old>.*)$ /image/eva/otaku-talk/$old permanent;
         rewrite ^/image/storyofyourlife/(?<old>.*)$ /image/story-of-your-life/$old permanent;
