--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9672,6 +9672,146 @@
 "~^/.*/Resilient-Haskell-Software.*$" "/Resilient-Haskell-Software";
 "~^/sicp/Introduction/$" "/sicp/introduction";
 "~^/static/font/mathjax/tex/woff/mathjax_main-regular.woff.*$" "/static/font/mathjax/TeX/woff/MathJax_Main-Regular.woff";
+"~^/docs-/psychology/okcupid-/yourlooksandyourinbox.html.*$" "/doc/psychology/okcupid/yourlooksandyourinbox.html";
+"~^/%E2%80%8B$" "/index";
+"~^/Black-market-arrests.*$" "/dnm-arrest";
+"~^/DNM-archiveS.*$" "/dnm-archive";
+"~^/doc/2010-sarrazin.*$" "/doc/anime/2010-sarrazin";
+"~^/doc/1952-asch.pdf.*$" "/doc/psychology/1952-asch.pdf";
+"~^/doc/1962-linton.pdf.*$" "/doc/psychology/1962-linton.pdf";
+"~^/doc/1963-peterson.pdf.*$" "/doc/psychology/spaced-repetition/1963-peterson.pdf";
+"~^/doc/1975-brown.pdf.*$" "/doc/history/1975-brown.pdf";
+"~^/doc/1977-glenberg.pdf.*$" "/doc/psychology/spaced-repetition/1977-glenberg.pdf";
+"~^/doc/1979-sechrest.pdf.*$" "/doc/sociology/1979-sechrest.pdf";
+"~^/doc/1980-damos.pdf.*$" "/doc/dual-n-back/1980-damos.pdf";
+"~^/doc/1981-staw.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1981-staw.pdf";
+"~^/doc/1984-berger.pdf.*$" "/doc/radiance/1984-berger.pdf";
+"~^/doc/1986-davis.pdf.*$" "/doc/psychology/cognitive-bias/sunk-cost/1986-davis.pdf";
+"~^/doc/1988-velleman.pdf.*$" "/doc/philosophy/ethics/1988-velleman.pdf";
+"~^/doc/1997-elvik.pdf.*$" "/doc/sociology/1997-elvik.pdf";
+"~^/doc/2001-chung.pdf.*$" "/doc/economics/experience-curve/2001-chung.pdf";
+"~^/doc/2002-pelc.pdf.*$" "/doc/statistics/order/comparison/2002-pelc.pdf";
+"~^/doc/2003-lounsbury.pdf.*$" "/doc/psychology/personality/conscientiousness/2003-lounsbury.pdf";
+"~^/doc/2004-ward.pdf.*$" "/doc/algernon/2004-ward.pdf";
+"~^/doc/2005-gusterson.pdf.*$" "/doc/radiance/2005-gusterson.pdf";
+"~^/doc/2007-bullock.pdf.*$" "/doc/statistics/bayes/2007-bullock.pdf";
+"~^/doc/2007-danigelis.pdf.*$" "/doc/dual-n-back/2007-danigelis.pdf";
+"~^/doc/2007-morgan.pdf.*$" "/doc/algernon/2007-morgan.pdf";
+"~^/doc/2008-simonton.pdf.*$" "/doc/culture/1998-simonton.pdf";
+"~^/doc/2009-phillips.pdf.*$" "/doc/modafinil/2009-phillips.pdf";
+"~^/doc/2011-oneill.pdf.*$" "/doc/wikipedia/2011-oneill.pdf";
+"~^/doc/2012-green.pdf.*$" "/doc/dual-n-back/2012-green.pdf";
+"~^/doc/2012-rauch.pdf.*$" "/doc/genetics/heritable/rare/2012-rauch.pdf";
+"~^/doc/2013-hodeswertz.pdf.*$" "/doc/genetics/selection/artificial/2013-hodeswertz.pdf";
+"~^/doc/2014-simons.pdf.*$" "/doc/genetics/selection/natural/human/2014-simons.pdf";
+"~^/doc/2015-mackenzie.pdf.*$" "/doc/genetics/heritable/correlation/1985-mackenzie.pdf";
+"~^/doc/2015-martorell.pdf.*$" "/doc/sociology/2015-martorell.pdf";
+"~^/doc/2015-rottensteiner.pdf.*$" "/doc/genetics/heritable/2015-rottensteiner.pdf";
+"~^/doc/2016-graves.pdf.*$" "/doc/reinforcement-learning/model-free/2016-graves.pdf";
+"~^/doc/2016-panero.pdf.*$" "/doc/culture/2016-panero.pdf";
+"~^/doc/2017-kirschner.pdf.*$" "/doc/psychology/2017-kirschner.pdf";
+"~^/doc/algernon/2009-ibanez.pdf\&.*$" "/doc/algernon/2009-ibanez.pdf";
+"~^/doc/dnb/2003-lee.pdf.*$" "/doc/genetics/heritable/adoption/2013-lee.pdf";
+"~^/doc/dnb/2007-anderson.pdf.*$" "/doc/music/music-distraction/2007-anderson.pdf";
+"~^/doc/dnb/2007-dixit.pdf.*$" "/doc/statistics/meta-analysis/2007-dixit.pdf";
+"~^/doc/dnb/2008-gonzalezalvarez.pdf.*$" "/doc/statistics/peer-review/2008-gonzalezalvarez.pdf";
+"~^/doc/genetics/1985-defries.pdf.*$" "/doc/genetics/heritable/1985-defries.pdf";
+"~^/doc/genetics/2010-stearns.pdf.*$" "/doc/genetics/selection/2010-stearns.pdf";
+"~^/doc/genetics/2015-polderman.pdf.*$" "/doc/genetics/heritable/2015-polderman.pdf";
+"~^/doc/genetics/2015-visscher.pdf.*$" "/doc/genetics/heritable/2015-visscher.pdf";
+"~^/doc/genetics/2016-hwang.pdf.*$" "/doc/genetics/heritable/correlation/2016-hwang.pdf";
+"~^/doc/genetics/2016-smith.pdf.*$" "/doc/genetics/heritable/correlation/2016-smith.pdf";
+"~^/doc/genetics/2017-mcconnell.pdf.*$" "/doc/genetics/heritable/2017-mcconnell.pdf";
+"~^/doc/genetics/heritable/2019-karlsson.pdf.*$" "/doc/genetics/heritable/correlation/2019-karlsson.pdf";
+"~^/doc/1999-fratiglioni.pdf.*$" "/doc/dual-n-back/1999-fratiglioni.pdf";
+"~^/doc/2003-randall.pdf.*$" "/doc/modafinil/2003-randall.pdf";
+"~^/doc/2009-qiu.pdfIn.*$" "/doc/dual-n-back/2009-qiu.pdf";
+"~^/doc/2010-cook.pdf.*$" "/doc/algernon/2010-cook.pdf";
+"~^/doc/dnb/1986-wilbourn.pdf.*$" "/doc/statistics/meta-analysis/1986-wilbourn.pdf";
+"~^/doc/genetics/2016-belsky.pdf.*$" "/doc/genetics/heritable/correlation/2016-belsky.pdf";
+"~^/doc/genetics/2016-pickrell.pdf.*$" "/doc/genetics/heritable/correlation/2016-pickrell.pdf";
+"~^/doc/psychology/2012-bainbridge.pdf.*$" "/doc/ai/2012-bainbridge.pdf";
+"~^/doc/statistics/1968-cohen.pdf.*$" "/doc/statistics/decision/1968-cohen.pdf";
+"~^/doc/statistics/1981-lagakos.pdf.*$" "/doc/statistics/bias/1981-lagakos.pdf";
+"~^/doc/mbee.com.vn/.*$" "/static/404";
+"~^/.rss$" "https://gwern.substack.com/feed";
+"~^/Slowing-Moore$" "/slowing-moores-law";
+"~^/doc/anime/eva/2002-notenki-memoirs.*$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/modafinil.html.*$" "/modafinil";
+"~^/Anime-reviews.*$" "/review/anime";
+"~^/static/img/logo/logo-smooth-appletouch.png.*$" "/static/img/logo/logo-favicon-appletouch.png";
+"~^/Sidenotes-\|-.*$" "/sidenote";
+"~^/Movie-reviews.*$" "/review/movie";
+"~^/Haskell-Summer-of-Code.*$" "/haskell/summer-of-code";
+"~^/GPT-3.*-coding.*$" "/gpt-3";
+"~^/fiction/The-Buddha$" "/fiction/buddhas-wheel";
+"~^/doc/statistics/1994-falk$" "/doc/statistics/bayes/1994-falk";
+"~^/doc/spacedrepetition$" "/doc/spaced-repetition/index";
+"~^/Bicycles-and-Rationality.*$" "/static/404";
+"~^/Yawgoog-injustice.*$" "/static/404";
+"~^/tool20ai.*$" "/tool-ai";
+"~^/static/linkauto.hs.*$" "/static/build/LinkAuto.hs";
+"~^/static/interwiki.hs.*$" "/static/build/Interwiki.hs";
+"~^/Sidenotes-%7C.*$" "/sidenote";
+"~^/newsletter/feed$" "https://gwern.substack.com/feed";
+"~^/Mnemosyne.*$" "/spaced-repetition";
+"~^/Mead.*$" "/review/mead";
+"~^/doc/psychology/spaced-repetition/favicon.ico.*$" "/static/img/favicon.png";
+"~^/doc/longevity/AB-testing.*$" "/ab-testing";
+"~^/doc/iq/1941-thurstone-fact$" "/doc/iq/1941-thurstone-factorialstudiesofintelligence.pdf";
+"~^/doc/culture/1963-asimov-sword-of-achilles.*$" "/doc/culture/1963-asimov";
+"~^/doc/Book-reviews.*$" "/review/book";
+"~^/doc/2002-gibson$" "/doc/japan/art/2002-gibson";
+"~^/crops/$" "/crops";
+"~^/Bitcoin-is-Worse-is-Better/.*$" "/bitcoin-is-worse-is-better";
+"~^/Aria$" "/aria";
+"~^/2011-San-Francisco.*$" "/static/404";
+"~^/2006-Cornell-TKD.*$" "/static/404";
+"~^/.../1942-borges$" "/doc/borges/1942-borges-johnwilkinsanalyticallanguage.pdf";
+"~^/zeo.html$" "/zeo/zeo";
+"~^/Zen-and-the-Art-of-Bicycle-Maintenance.*$" "/static/404";
+"~^/Wooden-pillows/$" "/wooden-pillow";
+"~^/Wikipedia-and-Dark-side-editing.html.*$" "/wikipedia-and-dark-side-editing";
+"~^/Terrorism-is-not$" "/terrorism-is-not-effective";
+"~^/Tanks%C2%A0.*$" "/tanks";
+"~^/static/link-suggester.hs$" "/static/build/link-suggester.hs";
+"~^/static/generatesimilar.hs$" "/static/build/generateSimilar.hs";
+"~^/static/generatedirectory.hi$" "/static/build/generateDirectory.hs";
+"~^/Spaced-Repetition$" "/spaced-repetition";
+"~^/Self-decrypting$" "/self-decrypting-file";
+"~^/Modafinil.pae$" "/modafinil.page";
+"~^/Mnemosyne.html$" "/spaced-repetition";
+"~^/New$" "/changelog";
+"~^/N-back-FAQ.html.*$" "/dnb-faq";
+"~^/N-back+FAQ.html.*$" "/dnb-faq";
+"~^/mugging.html$" "/mugging";
+"~^/Modafinil.pae$" "/modafinil.page";
+"~^/Mnemosyne.html.*$" "/spaced-repetition";
+"~^/Black-market$" "/doc/darknet-market/index";
+"~^/cat-sense.*$" "/review/cat";
+"~^/Changelog/feed$" "https://gwern.substack.com/feed";
+"~^/creatineremember.*$" "/creatine";
+"~^/cryptography$" "/doc/cs/cryptography/index";
+"~^/culture/1963-asimov.*$" "/doc/culture/1963-asimov";
+"~^/agi2025$" "/scaling-hypothesis";
+"~^/agi202$" "/scaling-hypothesis";
+"~^/agi20$" "/scaling-hypothesis";
+"~^/agi2$" "/scaling-hypothesis";
+"~^/agi$" "/scaling-hypothesis";
+"~^/doc/genetics/heritable/1972-jensen.pdf$" "/doc/iq/1972-jensen.pdf";
+"~^/Self-decrypting\+files.*$" "/self-decrypting-file";
+"~^/contactor$" "/me#contact";
+"~^/doc/2002-notenki-memoirs.*$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/doc/spacedrepetition/1939-spitzer$" "/doc/spaced-repetition/1939-spitzer.pdf";
+"~^/doc/statistics/2015-franco.pdf.*$" "/doc/statistics/bias/2015-franco.pdf";
+"~^/Faces.html.*$" "/face";
+"~^/GPT-3-作者.*$" "/gpt-3";
+"~^/LW2$" "https://www.lesswrong.com/users/gwern";
+"~^/hsqldb.*$" "/static/404";
+"~^/doc/genetics/heritable/2005-moffitt$" "/doc/genetics/heritable/2005-moffitt.pdf";
+"~^/doc/2012-wylie.pdf.*$" "/doc/nicotine/2012-wylie.pdf";
+"~^/doc/2012-penner.pdf.*$" "/doc/dual-n-back/2012-penner.pdf";
+"~^/axis1/.*$" "/static/404";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14706,6 +14846,18 @@
 "~^/.history.*$" "/static/404";
 "~^/.gitlab-ci.*$" "/static/404";
 "~^/[a-z0-9]+\.cfm.*$" "/static/404";
+"~^/doc/.*/user/register.*$" "/static/404";
+"~^/doc/.*/node/add.*$" "/static/404";
+"~^/wp-cli..*$" "/static/404";
+"~^/web-inf/.*$" "/static/404";
+"~^/~/v75/.*$" "/static/404";
+"~^/note/bestdarknetmarket.*$" "/static/404";
+"~^/horizon/.*$" "/static/404";
+"~^/health/.*$" "/static/404";
+"~^/gulpfile.*$" "/static/404";
+"~^/rockmongo.*$" "/static/404";
+"~^/auth.tar.*$" "/static/404";
+"~^/bitbucket.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
@@ -14716,4 +14868,5 @@
 "~(?<u>.*)\'$" "$u";
 "~^/doc/link-bibliography.*$" "/static/404";
 
-"~^/Danbooru2022.*$" "/Danbooru2021"; # WARNING: TO REMOVE in JANUARY 2023
+"~^/[Dd]anbooru2022.*$" "/Danbooru2021"; # WARNING: TO REMOVE in JANUARY 2023
+"~^/[Dd]anbooru2023.*$" "/danbooru2022"; # WARNING: TO REMOVE in JANUARY 2024
