--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9740,7 +9740,7 @@
 "~^/modafinil.html.*$" "/modafinil";
 "~^/Anime-reviews.*$" "/review/anime";
 "~^/static/img/logo/logo-smooth-appletouch.png.*$" "/static/img/logo/logo-favicon-appletouch.png";
-"~^/Sidenotes-\|-.*$" "/sidenote";
+"~^/Sidenotes-.-.*$" "/sidenote";
 "~^/Movie-reviews.*$" "/review/movie";
 "~^/Haskell-Summer-of-Code.*$" "/haskell/summer-of-code";
 "~^/GPT-3.*-coding.*$" "/gpt-3";
@@ -9812,6 +9812,34 @@
 "~^/doc/2012-wylie.pdf.*$" "/doc/nicotine/2012-wylie.pdf";
 "~^/doc/2012-penner.pdf.*$" "/doc/dual-n-back/2012-penner.pdf";
 "~^/axis1/.*$" "/static/404";
+"~^/gpt3$" "/gpt-3";
+"~^/doc/1996-hoare.pdf.*$" "/doc/math/1996-hoare.pdf";
+"~^/GPT-3-作.*$" "/gpt-3";
+"~^/Modafinil.*$" "/modafinil";
+"~^/Spaced.*$" "/spaced-repetition";
+"~^/doc/reinforcement$" "/doc/reinforcement-learning/index";
+
+"~^/A-B-testing.*$" "/ab-test";
+"~^/CHANGELOG.txt.*$" "/changelog";
+"~^/README.page.*$" "/index";
+"~^/conversation/clay_shirky-gin-television-and-cognitive-surplus.*$" "https://www.edge.org/conversation/clay_shirky-gin-television-and-cognitive-surplus";
+"~^/doc/1951-borges-argentinewriter.pdf.*$" "/doc/borges/1951-borges-theargentinewriterandtradition.pdf";
+"~^/doc/1998-simonton.pdf.*$" "/doc/culture/1998-simonton.pdf";
+"~^/doc/2007-westerberg.pdf.*$" "/doc/dual-n-back/2007-westerberg.pdf";
+"~^/doc/2009-mccord-crimeandfamily-ch1-a30yearfollowuptreatmenteffects.pdf.*$" "/doc/sociology/2009-mccord-crimeandfamily-ch1-a30yearfollowuptreatmenteffects.pdf";
+"~^/doc/2015-krawczyk.pdf.*$" "/doc/statistics/bias/2015-krawczyk.pdf";
+"~^/doc/2016-moser.pdf.*$" "/doc/economics/2016-moser.pdf";
+"~^/doc/ai/scaling/hardware/favicon.ico.*$" "/static/img/favicon.png";
+"~^/doc/biology/1992-minta.pdf%5C.*$" "/doc/biology/1992-minta.pdf";
+"~^/doc/genetics/selection/www.mountimprobable.com/about.*$" "/doc/genetics/selection/www.mountimprobable.com/index.html";
+"~^/doc/personal/2013-%C3%B0$" "/doc/personal/index";
+"~^/doc/psychology/writing/favicon.ico.*$" "/static/img/favicon.png";
+"~^/doc/.*/Everything.*$" "/everything";
+"~^/doc/.*/Terrorism-is-not-about-Terror.*$" "/terrorism-is-not-about-terror";
+"~^/doc/.*/Chapter-1.3.*$" "/sicp/chapter-1.3";
+"~^/doc/statistics/2016-hein.pdf.*$" "/doc/reinforcement-learning/2016-hein.pdf";
+"~^/favicon.png.*$" "/static/img/favicon.png";
+"~^/static/404/feed/.*$" "https://gwern.substack.com/feed";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14858,6 +14886,18 @@
 "~^/rockmongo.*$" "/static/404";
 "~^/auth.tar.*$" "/static/404";
 "~^/bitbucket.*$" "/static/404";
+"~^/.*/v2/users/.*$" "/static/404";
+"~^/.*/oembed/.*$" "/static/404";
+"~^/xt/.*$" "/static/404";
+"~^/pastein.ru.*$" "/static/404";
+"~^/.*/barcode.php.*$" "/static/404";
+"~^/microstrategyws/.*$" "/static/404";
+"~^/.*/happyaxis.jsp.*$" "/static/404";
+"~^/log-viewer.*$" "/static/404";
+"~^/linky.nu.*$" "/static/404";
+"~^/hotzones/.*$" "/static/404";
+"~^/.*/ads.js.*$" "/static/404";
+"~^/.*coveralls.yml.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
