--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -750,6 +750,7 @@ server {
         rewrite ^/Doc/History/(?<old>.*)$ /doc/history/$old permanent;
         rewrite ^/doc/cat/tartarian-honeysuckle/(?<old>.*)$ /doc/cat/tatarian-honeysuckle/$old permanent;
         rewrite ^/(?<old>.*)/null$ /$old/index permanent;
+        rewrite ^/(?<old>doc/.*)/null.*$ /$old/index permanent;
 
         rewrite ^/image/otakutalk/(?<old>.*)$ /image/eva/otaku-talk/$old permanent;
         rewrite ^/image/storyofyourlife/(?<old>.*)$ /image/story-of-your-life/$old permanent;
