--- a/nginx/rsyncd.conf
+++ b/nginx/rsyncd.conf
@@ -31,3 +31,12 @@ log file = /var/log/rsyncd.log
    list = yes
    read only = yes
    timeout = 6000
+
+[gwernnet]
+   path = /home/gwern/gwern.net/
+   comment = Gwern.net compiled site mirror (all HTML, snippets, documents) for easier download.
+   list = yes
+   read only = yes
+   timeout = 6000
+   auth users = rsync1
+   secrets file = /etc/rsyncd.secrets
