--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9840,6 +9840,18 @@
 "~^/doc/statistics/2016-hein.pdf.*$" "/doc/reinforcement-learning/2016-hein.pdf";
 "~^/favicon.png.*$" "/static/img/favicon.png";
 "~^/static/404/feed/.*$" "https://gwern.substack.com/feed";
+"~^/doc/2016-orquin.pdf.*$" "/doc/psychology/willpower/2016-orquin.pdf";
+"~^/danbooru2020$" "/danbooru2021#danbooru2020";
+"~^/doc/darknet-market/2013-power.*$" "/doc/darknet-market/silk-road/1/2013-power";
+"~^/doc/iq/2016-makel.pdf.*$" "/doc/iq/high/smpy/2016-makel.pdf";
+"~^/genetics$" "/doc/genetics/index";
+"~^/micrododing.*$" "/lsd-microdosing";
+"~/gpt3$" "/gpt-3";
+"~^/index.atom.*$" "https://gwern.substack.com/feed";
+"~^/About.git.*$" "/about.page";
+"~^/doc/statistics/1972-savage-foundationsofstatistics.pdf.*$" "/doc/statistics/decision/1972-savage-foundationsofstatistics.pdf";
+"~^/doc/.*/[Ii]somorphism.*$" "/isomorphism";
+"~^/TWDNE.*か.*$" "/twdne";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -14898,6 +14910,10 @@
 "~^/hotzones/.*$" "/static/404";
 "~^/.*/ads.js.*$" "/static/404";
 "~^/.*coveralls.yml.*$" "/static/404";
+"~^/incom/.*$" "/static/404";
+"~^/.*web---copy.*$" "/static/404";
+"~^/free_time..*$" "/static/404";
+"~^/static/template/include/[a-z]\.tmpl$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
